Changes with Apache 1.3b4

  *) WIN32: Work around optimiser bug that killed ISAPI in release
     versions. [Ben Laurie] PR#1533

  *) PORT: Update the MPE port [Mark Bixby, Jim Jagielski]

  *) Interim (slow) fix for p->sub_pool critical sections in
     alloc.c (affects win32 only).  [Ben Hyde]
  
  *) non-WIN32 was missing destroy_mutex definition.  [Ben Hyde]
  
  *) send_fd_length() did not calculate total_bytes_sent properly.
     [Ben Reser <breser@regnow.com>] PR#1366

  *) The large_write() changes tickled a bug in bputc(), this would
     show up as certain modules not working with Internet Explorer 4.0.
     Fix this bug, and also fix a performance bug related to bputc()
     causing a large_write() -- don't do large_write() unless there's
     at least two bytes to write.  [Dean Gaudet]

  *) Move the gid switching code into the child so that log files
     and pid files are opened with the root gid.
     [Gregory A Lundberg <lundberg@vr.net>]

  *) WIN32: Check for binaries by looking for the executable header
     instead of counting control characters.
	 [Jim Patterson <Jim.Patterson@Cognos.COM>] PR#1340

  *) ap_snprintf() moved from main/util_snprintf.c to ap/ap_snprintf.c
     so the functionality is available to applications other than the
     server itself (like the src/support tools).  [Ken Coar]

  *) ap_slack() moved out of main/util.c into ap/ap_slack.c as part of
     the libap consolidation work.  [Ken Coar]

  *) ap_snprintf() with a len of 0 behaved like sprintf().  This is not
     useful, and isn't what the standards require.  Now it returns 0
     and writes nothing.  [Dean Gaudet]
  
  *) When an error occurs in fcntl() locking suggest the user look up
     the docs for LockFile.  [Dean Gaudet]

  *) Eliminate some dead code from writev_it_all().
     [Igor Tatarinov <tatarino@prairie.NoDak.edu>]
  
  *) mod_autoindex had an fread() without checking the result code.