@@ -57,7 +57,9 @@ Committed Code Changes:
     * Dean's [PATCH] fix Rasmus' chunking error
     * [PATCH] PR#1366: fix result of send_fd_length
     * Ben Hyde's [PATCH] Finish suite of mutex ops for non-threaded platforms
-    * Ben Hyde's [PATCH] Serialize the update to pool.sub_* in destroy_pool (take 2)
+    * Ben Hyde's [PATCH] Serialize the update to pool.sub_* in destroy_pool
+      (take 2)
+    * Ken's [PATCH] for PR#1195 (" in realm names)
 
 Available Patches:
 
@@ -65,13 +67,10 @@ Available Patches:
 	<199712262015.PAA10624@devsys.jaguNET.com>
 	Status: Jim +1, Dirk +1, Marc wants to think about the name, Dean +1
 
-    * [PATCH] mod_digest/1599: proxy authentication using the digest auth scheme never succeeds (fwd)
+    * [PATCH] mod_digest/1599: proxy authentication using the digest auth
+      scheme never succeeds (fwd)
 	<Pine.LNX.3.95dg3.971225184830.17380C-100000@twinlark.arctic.org>
 	Status: Dean +1, Jim +1
-
-    * Ken's [PATCH] for PR#1195 (" in realm names)
-	<34A13B2C.EAD80C05@Golux.Com>
-	Status: Ken +1, Dean +1, Jim +1
 
     * Dean's [PATCH] mod_status cleanups
 	<Pine.LNX.3.95dg3.971220023128.4924E-100000@twinlark.arctic.org>
